k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
  metadata:
    name: static-ingress
    namespace: static
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
    - host: eks.avasaramaa.online
      http:
        paths:
          backend:
            serviceName: k8s-static-svc
            servicePort: 80
